high contrast fixes

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
@@ -187,10 +187,10 @@
 			text-align: left;
 			text-align: left;
 			@media #{$black-on-white} {
-				color: $yellow;
+				color: $high-contrast-blue;
 			}
 			@media #{$white-on-black} {
-				color: $blue-lighter;
+				color: $yellow;
 			}
 		}
 	}
