--- a/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-rounded-rectangle-radio/ui-rounded-rectangle-radio.component.scss
@@ -78,7 +78,7 @@
 			@media #{$black-on-white}{
 				background-color: $light;
 				border: none;
-				color: darkviolet;
+				color: $high-contrast-white-textselected;
 			}
 	
 		}
